--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@googleapis/gmail": "^12.0.0",
     "@prisma/client": "^6.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "openai": "^4.77.0",
     "pg": "^8.13.1",
@@ -20,6 +23,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "shadcn-ui": "^0.9.4",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
