--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@prisma/client": "^6.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "google-auth-library": "^9.15.0",
+    "googleapis": "^144.0.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "openai": "^4.77.0",
