--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@clerk/nextjs": "^6.9.6",
     "@googleapis/gmail": "^12.0.0",
     "@prisma/client": "^6.2.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.469.0",
+    "motion": "^11.17.0",
     "next": "15.1.2",
     "openai": "^4.77.0",
     "pg": "^8.13.1",
