--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.469.0",
     "motion": "^11.17.0",
     "next": "15.1.2",
+    "next-themes": "^0.4.4",
     "openai": "^4.77.0",
     "pg": "^8.13.1",
     "pgvector": "^0.2.0",
